@@ -1,5 +1,6 @@
 == master
 
+* Use Ruby 1.9's built-in Object#instance_exec for bound callbacks when it's available
 * Improve performance of cached dynamic state lookups by 25%
 
 == 0.7.5 / 2009-05-25
